heroku/envoy2.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10022
dynamic_resources:
  lds_config: {ads: {}}
  cds_config: {ads: {}}
  ads_config:
    api_type: GRPC
    grpc_services:
      envoy_grpc:
        cluster_name: envoy-control-xds
node:
  cluster: test-cluster
  id: test-id
  metadata:
    service_name: "echo2"
    ads: true
    ingress_host: "0.0.0.0"
    ingress_port: 10020
    egress_host: "0.0.0.0"
    egress_port: 10021
    use_remote_address: true
    access_log_enabled: false
    add_upstream_external_address_header: true
    resources_dir: "/etc/envoy/extra"
    proxy_settings:
      incoming:
        endpoints:
          - pathPrefix: "/"
            clients: ["echo1"]
      outgoing:
        dependencies:
          - service: "consul"
          - service: "echo1"
          - service: "echo2"
static_resources:
  listeners:
  - name: ingress_direct_response
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10023
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          use_remote_address: true
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/status/envoy/"}
                route:
                  cluster: this_admin
                  prefix_rewrite: "/"
              - match: { path: "/" }
                direct_response:
                  status: 200
                  body:
                    inline_string: "Hello from echo2"
          http_filters:
          - name: envoy.filters.http.router
  clusters:
    - name: local_service
      connect_timeout: 1s
      hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 10023
      http2_protocol_options: {}
    - name: envoy-control-xds
      connect_timeout: 1s
      hosts:
        - socket_address:
            address: 127.0.0.1
            port_value: 50000
      http2_protocol_options: {}
    - name: this_admin
      type: STATIC
      connect_timeout: 1s
      load_assignment:
        cluster_name: this_admin
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1
                  port_value: 10022
